# ldjam-47

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config
.github/workflows/: rust.yml
assets/mesh/: char_player.gltf  faux_soy_milk_store.gltf  faux_street.gltf  phys_door.gltf  prop_a.gltf  prop_b.gltf  prop_bed.gltf  prop_c.gltf  prop_chair.gltf  prop_desk.gltf  prop_door.gltf  prop_e.gltf  prop_flower_table.gltf  prop_lamp.gltf  prop_mobius.gltf  prop_rev_chair.gltf  prop_room.gltf
assets/navmesh/: rm_init.gltf
src/: array.rs  character.rs  faux.rs  level.rs  main.rs  navmesh.rs  phys.rs  room.rs  text.rs
src/proc/: mod.rs  walls.rs
