[package]
name = "ldjam-47"
version = "0.1.0"
authors = ["Szymon Walter <waltersz@protonmail.com>"]
edition = "2018"

[dependencies]
bevy = "0.2"
bevy-contrib-inspector = "0.2"
bevy_contrib_colors = "0.2"
bevy_easings = "0.1"
bevy_prototype_lyon = "0.1"
bevy_rapier3d = "0.2"
bevy_fly_camera = "0.4"
rapier3d = "0.1"
serde = "1.0"
itertools = "0.9"
hashbrown = "0.9"
rand = "0.7"